# capstonetwo_project

./: Makefile  README.md  environment.yml  pyproject.toml
capstonetwo_project/: __init__.py  dataset.py  features.py  plots.py
capstonetwo_project/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-ag-data-collection.ipynb  EDA_capstonetwo.ipynb  Pre_processing_training.ipynb  Untitled.ipynb  modelling.ipynb
