[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "capstonetwo_project"
version = "0.0.1"
description = "This is a capstone project for Springboard Data Science Career Track"
authors = [
  { name = "Abhinaya G." },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["capstonetwo_project"]
include = ["pyproject.toml", "capstonetwo_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["capstonetwo_project"]
force-sort-within-sections = true

